--- a/true-grid/paper_SEMS16.tex
+++ b/true-grid/paper_SEMS16.tex
@@ -183,6 +183,15 @@ From the testing perspective, TrueGrid provides a kind of ``FIT testing on stero
 In this case, the grid shown in Fig.~\ref{FIG:leftpad} could have an additional column indicating the success or failure of the function execution, or use green/red coloring of rows to the same effect.
 Again, the success indicators would be automatically updated upon changing the source code on left. 
 
+\section{Related Work}
+
+This work is positioned at the intersection of end-user programming and professional software development~\cite{EUSE}. The particular link between software engineering and spreadsheet has been explored before. For instance, Cunha et al. present model-based programming environments for spreadsheets~\cite{cunha2014model}.
+The focus of this work is to improve reliability of spreadsheet engineering by applying model-driven techniques. 
+In this work we primarily focus on improving programmer experience.
+
+Integrating spreadsheet-based user interfaces with code editors is a simple form of a heterogeneous programming environment (e.g.,~\cite{schrage2008beyond}), originally pioneered in the work on structure editors, and recently popularized by the Jetbrains Meta Programming System~\cite{MPS}. Although this kind of work aims for a much more invasive integration, it is in line with the goal of having best user interfaces for each aspect of the code. A similar strand of research is explored in the context of DSLs by Adam and Schultz~\cite{adam2015towards}. 
+
+
 
 \section{Conclusion and Outlook}
 
