--- a/true-grid/references.bib
+++ b/true-grid/references.bib
@@ -1,3 +1,71 @@
+
+
+@Misc{MPS,
+  key =       {MPS},
+  author =    {Jetbrains},
+  title =     {Meta Programming System},
+  howpublished = {Online},
+  year =      {2016},
+  note =      {\url{https://www.jetbrains.com/mps/}}
+}
+
+@inproceedings{adam2015towards,
+  title={Towards tool support for spreadsheet-based domain-specific languages},
+  author={Adam, Sorin and Schultz, Ulrik Pagh},
+  booktitle={Proceedings of the 2015 ACM SIGPLAN International Conference on Generative Programming: Concepts and Experiences},
+  pages={95--98},
+  year={2015},
+  organization={ACM}
+}
+
+@article{schrage2008beyond,
+  title={Beyond {ASCII} {--} Parsing Programs with Graphical Presentations.},
+  author={Schrage, Martijn M and Swierstra, S Doaitse},
+  journal={J. UCS},
+  volume={14},
+  number={21},
+  pages={3414--3430},
+  year={2008}
+}
+
+@article{EUSE,
+  author    = {Andrew J. Ko and
+               Robin Abraham and
+               Laura Beckwith and
+               Alan F. Blackwell and
+               Margaret M. Burnett and
+               Martin Erwig and
+               Christopher Scaffidi and
+               Joseph Lawrance and
+               Henry Lieberman and
+               Brad A. Myers and
+               Mary Beth Rosson and
+               Gregg Rothermel and
+               Mary Shaw and
+               Susan Wiedenbeck},
+  title     = {The state of the art in end-user software engineering},
+  journal   = {{ACM} Comput. Surv.},
+  volume    = {43},
+  number    = {3},
+  pages     = {21},
+  year      = {2011},
+  url       = {http://doi.acm.org/10.1145/1922649.1922658},
+  doi       = {10.1145/1922649.1922658},
+  timestamp = {Tue, 17 May 2011 10:11:35 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/csur/KoABBBESLLMRRSW11},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{cunha2014model,
+  title={Model-based programming environments for spreadsheets},
+  author={Cunha, J{\'a}come and Mendes, Jorge and Saraiva, Jo{\~a}o and Visser, Joost},
+  journal={Science of Computer Programming},
+  volume={96},
+  pages={254--275},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @inproceedings{maloney_directness_1995,
 	address = {New York, NY, USA},
 	series = {{UIST} '95},
@@ -38,15 +106,10 @@
 	title = {Visual {Programming}},
 	copyright = {Copyright © 1999 by John Wiley \& Sons, Inc.},
 	isbn = {978-0-471-34608-1},
-	url = {http://onlinelibrary.wiley.com/doi/10.1002/047134608X.W1707/abstract},
-	abstract = {The sections in this article are},
-	language = {en},
-	urldate = {2015-10-29},
 	booktitle = {Wiley {Encyclopedia} of {Electrical} and {Electronics} {Engineering}},
 	publisher = {John Wiley \& Sons, Inc.},
 	author = {Burnett, Margaret M.},
-	year = {2001},
-	file = {Snapshot:C\:\\Users\\Felienne\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\dgizxtry.default\\zotero\\storage\\42HVS3TN\\abstract\;jsessionid=890D77C4F34271648DB0D377BF7AFA8C.html:text/html}
+	year = {2001}
 }
 
 @phdthesis{HermansPhD,
@@ -61,8 +124,7 @@
 	author = {Rick Mugridge and Ward Cunningham},
 	year = {2005},
 	publisher = {Prentice Hall}	
-	publisher = {Prentice Hall}	
-	}
+}
 
 
 @inproceedings{lieberman1995bridging,
