--- a/true-grid/paper_SEMS16.tex
+++ b/true-grid/paper_SEMS16.tex
@@ -185,12 +185,11 @@ Again, the success indicators would be automatically updated upon changing the s
 
 \section{Related Work}
 
-This work is positioned at the intersection of end-user programming and professional software development~\cite{EUSE}. The particular link between software engineering and spreadsheet has been explored before. For instance, Cunha et al. present model-based programming environments for spreadsheets~\cite{cunha2014model}.
+This work is positioned at the intersection of end-user programming and professional software development~\cite{EUSE}. The particular link between software engineering and spreadsheets has been explored before. For instance, Cunha et al. present model-based programming environments for spreadsheets~\cite{cunha2014model}.
 The focus of this work is to improve reliability of spreadsheet engineering by applying model-driven techniques. 
 In this work we primarily focus on improving programmer experience.
 
-Integrating spreadsheet-based user interfaces with code editors is a simple form of a heterogeneous programming environment (e.g.,~\cite{schrage2008beyond}), originally pioneered in the work on structure editors, and recently popularized by the Jetbrains Meta Programming System~\cite{MPS}. Although this kind of work aims for a much more invasive integration, it is in line with the goal of having best user interfaces for each aspect of the code. A similar strand of research is explored in the context of DSLs by Adam and Schultz~\cite{adam2015towards}. 
-
+Integrating spreadsheet-based user interfaces with code editors leads to a simple form of a heterogeneous programming environment (e.g.,~\cite{schrage2008beyond}), originally pioneered in the work on structure editors, and recently popularized by the Jetbrains Meta Programming System~\cite{MPS}. Although this kind of work aims for a much more invasive integration, it is in line with the goal of having the best user interface for each aspect of the programming experience. A similar strand of research is explored in the context of DSLs by Adam and Schultz~\cite{adam2015towards}. 
 
 
 \section{Conclusion and Outlook}
